--- a/JSアプリ/MyOmikuji/css/style.css
+++ b/JSアプリ/MyOmikuji/css/style.css
@@ -7,15 +7,22 @@ body {
   height: 200px;
   background-color: #ef454a;
   border-radius: 50%;
-  margin: auto;
+  margin: 30px auto;
   text-align: center;
   line-height: 200px;
   color: #fff;
   font-weight: bold;
   font-size: 42px;
   cursor: pointer;
+  box-shadow: 0 10px 0 #d1483e;
+  user-select: none;
 }
 
 #btn:hover {
   opacity: .9;
+}
+
+#btn:active {
+  box-shadow: 0 5px 0 #d1483e;
+  margin-top: 35px;
 }
