--- a/CSSアプリ/csschat/css/style.css
+++ b/CSSアプリ/csschat/css/style.css
@@ -21,6 +21,15 @@ body {
   margin-top: 32px;
 }
 
+li.right-side {
+  flex-direction: row-reverse;
+}
+
+.pic {
+  width: 80px;
+  text-align: center;
+}
+
 .pic img {
   width: 48px;
   height: 48px;
@@ -33,4 +42,26 @@ body {
   padding: 16px 24px;
   max-width: 60%;
   line-height: 1.8;
+  position: relative;
+}
+
+.text::before {
+  content: '';
+  width: 0;
+  height: 0;
+  /* border: 8px solid #fff; */
+  border: 8px solid transparent;
+  position: absolute;
+}
+
+.left-side .text::before {
+  top: 12px;
+  left: -16px;
+  border-right-color: #fff;
+}
+
+.right-side .text::before {
+  top: 12px;
+  right: -16px;
+  border-left-color: #fff;
 }
